# estracta-flask-app

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py
app/api/: __init__.py  companies.py  controller.py  repository.py  resource.py
app/extensions/: database.py
app/models/: company.py
tests/: conftest.py
