[tool.poetry]
name = "estracta-flask-app"
version = "0.1.0"
description = ""
authors = ["Giovanni Dias <giovannidias.mo@gmail.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "estracta_flask_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
pytest = "^7.4.0"
dynaconf = "^3.2.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
